--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_theorem.sty
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_theorem.sty
@@ -87,7 +87,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\theoremstyle{break}
+\theoremstyle{plain}
 \theoremseparator{}
 \theoremheaderfont{\osfamily \bfseries \upshape}
 \theorembodyfont{}
@@ -117,8 +117,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{definition}{Definition}
 
@@ -159,8 +159,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{satz}[thmcount]{Satz}
 
@@ -186,8 +186,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{lemma}[thmcount]{Lemma}
 
@@ -213,8 +213,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{aussage}[thmcount]{Aussage}
 
@@ -240,8 +240,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{proposition}[thmcount]{Proposition}
 
@@ -267,8 +267,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{folgerung}[thmcount]{Folgerung}
 
@@ -293,8 +293,8 @@
 	%frametitlefont=\osfamily\bfseries,%
 	%skipabove=5pt,%
 	%skipbelow=5pt,%
-	skipabove=6pt,%
-	skipbelow=6pt,%
+	skipabove=\skiparound,%
+	skipbelow=\skiparound,%
 	nobreak,%
 ]{korollar}[thmcount]{Korollar}
 
@@ -304,7 +304,7 @@
 %--------------------------------------
 % theorems without frames
 %--------------------------------------
-\theoremstyle{break}
+\theoremstyle{plain}
 \theoremheaderfont{\osfamily \bfseries}
 \theorembodyfont{}
 \theoremseparator{}
@@ -320,7 +320,7 @@
 % theorems without numbers but break
 %--------------------------------------
 
-\theoremstyle{nonumberbreak}
+\theoremstyle{nonumberplain}
 \theoremheaderfont{\osfamily \bfseries}
 \theorembodyfont{}
 \theoremseparator{}
