HANA: update exercises

--- a/Math-Ba-HANA/HANA_Uebung/hana_uebungen-2.tex
+++ b/Math-Ba-HANA/HANA_Uebung/hana_uebungen-2.tex
@@ -1,6 +1,6 @@
-\begin{exercisePage}[Konvergenz \& Kompaktheit in topologischen Räumen]
+\begin{exercisePage}[Konvergenz \& Kompaktheit in topologischen Räumen][10/15]
 	
-	%%% AUFGABE 5 %%%
+	%%% AUFGABE 4 %%%
 	\begin{exercise}
 		Es sei $\tau$ die sogenannte koabzählbare Topologie auf $\R$, das heißt
 		\begin{equation*}
