--- a/Math-Ba-HANA/HANA_Uebung/hana_uebungen-3.tex
+++ b/Math-Ba-HANA/HANA_Uebung/hana_uebungen-3.tex
@@ -1,4 +1,4 @@
-\begin{exercisePage}[Netze und normierte Räume]
+\begin{exercisePage}[Netze und normierte Räume][11.5/15]
 	
 	\begin{exercise}
 		Es seien $X$ ein topologischer Raum, $M \subset X$ und $u \in X$. Beweisen Sie: 
